--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </section>
     </main>
     <footer>
+        <p>Unlock peak fitness! For personalized training or nutrition advice, contact Pine Gym today. Elevate your well-being and transform with us!</p>
+        <button id="book-session">Book PT Session</button>
+        <button id="nutrition-advice">Nutrition Advice</button>
     </footer>
 </body>
 </html>
+
+<!--Calls to action-->
+<!--Videos and Images-->
+<!--Git Repo-->
+<!--Nutrition and PT Advice- Nav Bar-->
+<!--Check Validators & Performance-->
+<!--Add Schedulling timetable over days-->
