--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     <main>
         <!-- Client Workouts -->
         <section id="workout-section">
-            <h2>Individual Exercises</h2>
+            <h2>Create Workouts</h2>
             <ul id="workout-list"></ul>
             <!-- Form for adding, editing, and deleting workouts -->
             <form id="workout-form">
                 <input type="text" id="workout-name" placeholder="Workout Name" required>
                 <input type="file" id="workout-file" accept=".png, .mp4" required>
                 <button type="button" id="add-workout">Add Workout</button>
-                <button type="button" id="save-workout">Save Workout</button>
-                <button type="button" id="delete-workout">Delete Workout</button>
             </form>
         </section>
         <!-- Compiled/Saved Workouts -->
@@ -38,10 +36,3 @@
     </footer>
 </body>
 </html>
-
-<!--Calls to action-->
-<!--Videos and Images-->
-<!--Git Repo-->
-<!--Nutrition and PT Advice- Nav Bar-->
-<!--Check Validators & Performance-->
-<!--Add Schedulling timetable over days-->
